...
                                        ),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('mediaTitle_fbb3'),
                                    controller: _model.mediaTitleTextController,
                                    focusNode: _model.mediaTitleFocusNode,
                                    autofocus: false,
                                    enabled: true,
                                    obscureText: false,
                                    decoration: InputDecoration(
...
                                    fit: BoxFit.cover,
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('reviewDetails_h5lu'),
                                    controller:
                                        _model.reviewDetailsTextController,
                                    focusNode: _model.reviewDetailsFocusNode,
                                    autofocus: false,
                                    enabled: true,
                                    obscureText: false,
...
                                  itemCount: 10,
                                  itemSize: 32.0,
                                  glowColor:
                                      FlutterFlowTheme.of(context).warning,
                                ),
                                FFButtonWidget(
                                  key: ValueKey('Button_uc5g'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'ADD_REVIEW_PAGE_Button_8nqhtth4_ON_TAP');
                                    logFirebaseEvent('Button_backend_call');

                                    await ReviewsRecord.collection.doc().set({
...
